--- a/spec/fixtures/vcr_cassettes/models/account/update_token.yml
+++ b/spec/fixtures/vcr_cassettes/models/account/update_token.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: put
-    uri: http://localhost:3002/v1/accounts/change_password_with_token/BMMGWO23?new_password=99999999q&token=sometoken
+    uri: http://localhost:3002/v1/accounts/update_password_token/BMMGWO23?token=sometoken
     body:
       encoding: US-ASCII
       string: ''
@@ -27,15 +27,15 @@ http_interactions:
       X-Ua-Compatible:
       - IE=Edge
       Etag:
-      - ! '"627259baefbee5921ce78e45b82415fc"'
+      - ! '"6e11bd540846038b236147513d900d81"'
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 114e9e45c4050fc54ea6ac4e556e7704
+      - 6742685b529c29601cedddd3092ccb59
       X-Runtime:
-      - '1.388038'
+      - '1.403548'
       Date:
-      - Sat, 13 Apr 2013 15:18:03 GMT
+      - Sat, 13 Apr 2013 15:05:52 GMT
       X-Rack-Cache:
       - invalidate, pass
       Connection:
@@ -44,7 +44,7 @@ http_interactions:
       - thin 1.5.0 codename Knife
     body:
       encoding: US-ASCII
-      string: ! '{"response":{"success":"true","message":"Password changed successfully."}}'
+      string: ! '{"response":{"success":"true","message":"Passcode successfully updated."}}'
     http_version: !!null 
-  recorded_at: Sat, 13 Apr 2013 15:18:03 GMT
+  recorded_at: Sat, 13 Apr 2013 15:05:52 GMT
 recorded_with: VCR 2.3.0
