--- a/spec/fixtures/vcr_cassettes/models/account/authenticate_success.yml
+++ b/spec/fixtures/vcr_cassettes/models/account/authenticate_success.yml
@@ -1,11 +1,11 @@
 ---
 http_interactions:
 - request:
-    method: put
-    uri: http://localhost:3002/v1/accounts/change_password_with_token/BMMGWO23?new_password=99999999q&token=sometoken
+    method: post
+    uri: http://localhost:3002/v1/accounts/authenticate
     body:
       encoding: US-ASCII
-      string: ''
+      string: ! '{"membername":"BMMGWO23","password":"11111111a"}'
     headers:
       Oauth-Token:
       - 00DK0000008yRYr!AQQAQO4WJnYkNmiAiVr3FCBXUPxExpHKjAnAXIiKCBzVEOWLCgSw.KH3stkHJDoaz5PcHq2qTOWhYu0xvxybUe4Ko6DDIAAx
@@ -19,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Content-Length:
-      - '74'
+      - '196'
       Content-Type:
       - application/json; charset=utf-8
       X-Meta-Request-Version:
@@ -27,15 +27,15 @@ http_interactions:
       X-Ua-Compatible:
       - IE=Edge
       Etag:
-      - ! '"627259baefbee5921ce78e45b82415fc"'
+      - ! '"44ecf07f5a47abd7956342d11f6e6a21"'
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 114e9e45c4050fc54ea6ac4e556e7704
+      - aba2f593e3ee2a9ce2c1e16ec3ca1751
       X-Runtime:
-      - '1.388038'
+      - '1.228151'
       Date:
-      - Sat, 13 Apr 2013 15:18:03 GMT
+      - Sat, 13 Apr 2013 14:08:36 GMT
       X-Rack-Cache:
       - invalidate, pass
       Connection:
@@ -44,7 +44,7 @@ http_interactions:
       - thin 1.5.0 codename Knife
     body:
       encoding: US-ASCII
-      string: ! '{"response":{"success":"true","message":"Password changed successfully."}}'
+      string: ! '{"response":{"success":"true","message":"Successful sfdc login.","access_token":"00DK0000008yRYr!AQQAQKo6rwuogiKnBtvcWqXUE10BhCq1AQh0sjzc9jgrbcOp.7XTH.MxRly38aZNSl3n6SeSPp1t_YqOL42fijWz3li2CzUW"}}'
     http_version: !!null 
-  recorded_at: Sat, 13 Apr 2013 15:18:03 GMT
+  recorded_at: Sat, 13 Apr 2013 14:08:36 GMT
 recorded_with: VCR 2.3.0
