added unicorn workers default of 1 for dev

--- a/.env-example
+++ b/.env-example
@@ -33,3 +33,4 @@ DOCUSIGN_US_TAX_TEMPLATE=
 DOCUSIGN_INTL_TAX_TEMPLATE=
 CLOUDINARY_URL=
 ENCRYPTION_KEY=YPeUxbABC11&?D]3J$xYYXPf
+WEB_CONCURRENCY=1
