--- a/.env-example
+++ b/.env-example
@@ -28,7 +28,12 @@ AWS_BUCKET=
 RECAPTCHA_PUBLIC_KEY=
 RECAPTCHA_PRIVATE_KEY=
 WEBSITE_URL=http://localhost:3000
-DOCUSIGN_SIGNING_DOMAIN=
+DOCUSIGN_USERNAME=
+DOCUSIGN_PASSWORD=
+DOCUSIGN_INTEGRATOR_KEY=
+DOCUSIGN_ACCOUNT_ID=
+DOCUSIGN_ENDPOINT=
+DOCUSIGN_API_VERSION=
 DOCUSIGN_US_TAX_TEMPLATE=
 DOCUSIGN_INTL_TAX_TEMPLATE=
 CLOUDINARY_URL=
