mods for compiling assets with asset_sync

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,3 +10,9 @@ test:
   adapter: postgresql
   database: cs_website_cms_test
   host: localhost
+
+# this is for testing and precompiling assets locally. Heroku overwrite this file during deploy
+production:
+  adapter: postgresql
+  database: cs_website_cms_development
+  host: localhost
