added banner text from sal

--- a/config/banner_data.yml
+++ b/config/banner_data.yml
@@ -1,6 +1,6 @@
-- main: This is awesome
-  sub: Connecting businesses who need innovation and development with the world's best development and design community
-- main: A Marketplace for<br/> Cloud Development  
-  sub: Connecting businesses who need innovation and development with the world's best development and design community
-- main: Preettty Awwweeesome!!!!  
-  sub: Connecting businesses who need innovation and development with the world's best development and design community
+- main: A Marketplace for<br/>Cloud Development
+  sub: Connecting businesses who need innovation and development<br/>with the world's best development and design community
+- main: The World is Now<br/>Your Development Partner 
+  sub: Drive innovation by harnessing the collective talent<br/>of the world's best cloud developers and designers
+- main: The Future of<br/>Cloud Development
+  sub: We see crowdsourcing as an inherent expression<br/>of the way value in the Cloud manifests itself - Saugatuck
