tweaked text for sal

--- a/config/banner_data.yml
+++ b/config/banner_data.yml
@@ -3,4 +3,4 @@
 - main: The World is Now<br/>Your Development Partner 
   sub: Drive innovation by harnessing the collective talent<br/>of the world's best <a href="http://go.appirio.com/index_banner_2">cloud developers and designers</a>
 - main: The Future of<br/>Cloud Development
-  sub: <i>"We see crowdsourcing as an inherent expression<br/>of the way value in the Cloud manifests itself"</i> - <a href="http://www.cloudspokes.com/what-we-do/saugatuck">Saugatuck</a>
+  sub: <i>"We see crowdsourcing as an inherent expression<br/>of the way value in the Cloud manifests itself"</i> - <a href="http://go.appirio.com/index_banner_3">Saugatuck</a>
