--- a/config/database.yml
+++ b/config/database.yml
@@ -21,3 +21,8 @@ production:
   adapter: postgresql
   database: cs_website_cms_development
   host: localhost
+
+cloudconnect:
+  adapter: postgresql
+  database: cs_website_cms_development
+  host: localhost
