added new mountain text for staging

--- a/config/banner_data.yml
+++ b/config/banner_data.yml
@@ -1,6 +1,6 @@
+- main: CLOUDSPOKES and<br/> MOUNTAIN, TOGETHER
+  sub: Two of the biggest developer communities in the world have teamed up to change <a href="http://blog.cloudspokes.com" target="_blank">how the world drives innovation</a>
 - main: A Marketplace for<br/>Cloud Development
   sub: Connecting businesses who need <a href="http://go.appirio.com/index_banner_1">innovation and development</a><br/>with the world's best development and design community
-- main: The World is Now<br/>Your Development Partner 
-  sub: Drive innovation by harnessing the collective talent<br/>of the world's best <a href="http://go.appirio.com/index_banner_2">cloud developers and designers</a>
 - main: The Future of<br/>Cloud Development
   sub: <i>"We see crowdsourcing as an inherent expression<br/>of the way value in the Cloud manifests itself"</i> - <a href="http://go.appirio.com/index_banner_3">Saugatuck</a>
