final text for banner

--- a/config/banner_data.yml
+++ b/config/banner_data.yml
@@ -1,4 +1,4 @@
-- main: CLOUDSPOKES and<br/> MOUNTAIN, TOGETHER
+- main: CLOUDSPOKES and<br/> TOPCODER, TOGETHER
   sub: Two of the biggest developer communities in the world have teamed up to change <a href="http://www.cloudspokes.com/press/september-17-2013" target="_blank">how the world drives innovation</a>
 - main: A Marketplace for<br/>Cloud Development
   sub: Connecting businesses who need <a href="http://go.appirio.com/index_banner_1">innovation and development</a><br/>with the world's best development and design community
