changed getting start guide

--- a/.env-example
+++ b/.env-example
@@ -8,14 +8,14 @@ DEV_MAILSERVER_PORT=587
 DEV_MAILSERVER_DOMAIN=gmail.com
 DEV_MAILSERVER_USERNAME=
 DEV_MAILSERVER_PASSWORD=
-CS_API_URL=http://cs-api-sandbox.herokuapp.com/v1
+CS_API_URL=http://api-sandbox.cloudspokes.com/v1
 CS_API_EXPIRY=5
 SFDC_HOST=test.salesforce.com
 SFDC_ADMIN_USERNAME=
 SFDC_ADMIN_PASSWORD=
 THIRD_PARTY_PASSWORD=
-SFDC_APEXREST_URL=https://cs9.salesforce.com/services/apexrest/v.9
-SFDC_INSTANCE_URL=https://cs9.salesforce.com
+SFDC_APEXREST_URL=https://cs10.salesforce.com/services/apexrest/v.9
+SFDC_INSTANCE_URL=https://cs10.salesforce.com
 GITHUB_ID=
 GITHUB_SECRET=
 TWITTER_KEY=
